package src.core.utils;

public class TestData {
    
    private float[] testIndependentlyX;
    private float[] testDependentlyY;
    public float[] getTestIndependentlyX() {
        return testIndependentlyX;
    }
    public void setTestIndependentlyX(float[] testIndependentlyX) {
        this.testIndependentlyX = testIndependentlyX;
    }
    public float[] getTestDependentlyY() {
        return testDependentlyY;
    }
    public void setTestDependentlyY(float[] testDependentlyY) {
        this.testDependentlyY = testDependentlyY;
    }
}
